# dash_entrypoints

./: .bumpversion.cfg  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pytest.ini  setup.cfg  setup.py
.github/workflows/: CI.yaml
dash_entrypoints/: __init__.py  cli.py  entrypoint.py  misc.py
dash_entrypoints/assets/: __init__.py  dropdown.fix.css
dash_entrypoints/elements/: datatable.py  popup_for_information.py  table_for_editing.py  table_for_selection.py  table_layout_wrapper.py  table_with_dropdown.py
dash_entrypoints/multi_page/: __init__.py  cli.py  entrypoint.py
dash_entrypoints/plugins/: minimalplugin.py
dash_entrypoints/views/: __init__.py  add__example_add_table.py  add__example_callback_wrapper_dropdown.py  add__example_callback_wrapper_edit_table.py  add__example_callback_wrapper_selection.py  add__example_popup_for_info.py  add__example_table_dropdown.py  add__example_table_edit_table.py  add__example_table_selection.py  show__example_page.py
tests/: run_default.py  run_via_cli.py  test__dropdown.py
