[metadata]
name = dash_entrypoints
version = 0.2.3
author = Lars B. Rollik
author_email = L.B.Rollik@protonmail.com
license = BSD License
license_files = LICENSE
description = Dash entrypoints: Wrapper for dash/dash-labs multi-page app and specific layout elements
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/larsrollik/dash_entrypoints
project_urls =
	Issue Tracker = https://github.com/larsrollik/dash_entrypoints/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir =
packages = find:
python_requires = >=3.6
install_requires =
	dash
	dash_bootstrap_components
	dash_labs==1.0.2
	rich

[options.packages.find]
where =

[options.extras_require]
dev =
	black
	coverage
	pytest-cov
	pytest
	gitpython
	bump2version
	pre-commit
	flake8

[options.entry_points]
console_scripts =
	ifentry = dash_entrypoints.__init__:run_cli

[options.package_data]
* = *.config

[flake8]
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 79
max-complexity = 18
select = B,C,E,F,W,T4,B9
exclude = __init__.py,build,__pycache__,.git,tests
